--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,6 +10,12 @@
   -moz-user-select: none;
   -o-user-select: none;
   user-select: none;
+  --ms-scrollbar-width: none;
+  scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 img {
@@ -22,8 +28,6 @@ html {
 
 body {
   margin: 0;
-  --ms-scrollbar-width: none;
-  scrollbar-width: none;
   font-family: "Roboto", sans-serif;
   background-color: #444455;
   color: lightgrey;
@@ -38,9 +42,7 @@ body {
   background-color: transparent;
 }
 
-body::-webkit-scrollbar {
-  display: none;
-}
+
 
 #name {
   display: flex;
@@ -155,6 +157,7 @@ h2 {
   padding: 25px;
   border-radius: 15px;
   color: lightgrey;
+  overflow: scroll;
 }
 
 #mission p {
